--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/sample
 spring.datasource.username=root
 spring.datasource.password=password123
+spring.servlet.multipart.enabled=true
+
