--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=demo
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/sample
 spring.datasource.username=root
-spring.datasource.password=password123
+spring.datasource.password=root
 spring.servlet.multipart.enabled=true
 
