--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/sample
+spring.datasource.url=jdbc:mysql://localhost:3306/moviedb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.servlet.multipart.enabled=true
